[gd_scene load_steps=2 format=3 uid="uid://m0c6r8g6xxwj"]

[ext_resource type="Script" path="res://global/new_base_dialog.gd" id="1_fgybm"]

[node name="NewBaseDialog" type="Window"]
process_mode = 2
title = "Choose base name"
initial_position = 2
size = Vector2i(250, 90)
exclusive = true
unresizable = true
popup_window = true
script = ExtResource("1_fgybm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LineEdit" type="LineEdit" parent="CanvasLayer"]
custom_minimum_size = Vector2(230, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_right = 115.0
offset_bottom = 31.0
grow_horizontal = 2
placeholder_text = "Base name"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -50.0
offset_right = 47.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="OkButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_neighbor_right = NodePath("../CancelButton")
text = "Ok"

[node name="CancelButton" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
focus_neighbor_left = NodePath("../OkButton")
text = "Cancel"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
